--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,7 @@ jobs:
               return 0
             fi
 
-      - revert-migrations
+      # - revert-migrations
 
 #   cloudfront-update:
 #     docker:
