--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,7 +282,27 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-  smoke-test:
+  smoke-test-frontend:
+    docker:
+      -image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: install depends
+          command:
+          sudo apt install curl
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-kk1j667dhjjqmz437.s3-website-us-east-1.amazonaws.com"
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 0
+            fi
+
+  smoke-test-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
@@ -299,19 +319,12 @@ jobs:
             backend_url=`curl -H "token: 71542142-408e-460b-97e0-e34d677473f6" --request GET https://api.memstash.io/values/backend_ip`
             curl "http://${backend_url}:3030/api/status"
 
-      - run:
-          name: Frontend smoke test.
-          no_output_timeout: 10m
-          command: |
-            URL="http://udapeople-kk1j667dhjjqmz437.s3-website-us-east-1.amazonaws.com"
-            if curl -s ${URL} | grep "Welcome"
-            then
-              return 0
-            else
-              return 0
-            fi
-
       # - revert-migrations
+
+
+
+
+
 
 #   cloudfront-update:
 #     docker:
@@ -373,8 +386,10 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
+      - smoke-test-frontend:
           requires: [deploy-backend, deploy-frontend]
+      - smoke-test-backend:
+          requires: [deploy-backend, deploy-frontend, smoke-test-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
