--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -35,9 +35,14 @@
   command: npm run build
   args:
     chdir: /root/backend
-- name: "start server"
+
+- name: "setting port"
   become: true
   shell: export NODE_PORT=3030
+
+- name: "start server"
+  become: true
+  shell:
   command: pm2 start npm -- run start
   args:
     chdir: /root/backend/dist
