--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,6 +280,7 @@ jobs:
             cd .circleci/ansible
             backend_url=`curl -H "token: 71542142-408e-460b-97e0-e34d677473f6" --request GET https://api.memstash.io/values/backend_ip`
             echo ${backend_url} >> inventory.txt
+            tar czf backend.tar.gz backend/
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
       - revert-migrations
