--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -7,22 +7,30 @@
     src: /root/project/backend
     dest: /home/ubuntu
 
-- name: "install package dependencies"
-  shell: |
-    cd /home/ubuntu/backend    
-    npm install
+- name: "install dependencies."
+  become: true
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
-- name: "build package"
+- name: "install pm2"
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    production: yes
+    state: present
+
+- name: Install Node
+  shell: |
+    cd /home/ubuntu/backend
+    npm install
+- name: Build Node
   shell: |
     cd /home/ubuntu/backend
     npm run build
-- name: "run migrations  again for certainty"
+- name: Start PM2
   shell: |
     cd /home/ubuntu/backend
-    npm run migrations
-
-- name: Executing node
-  become: true
-  shell: |
-    cd /home/ubuntu/backend 
-    pm2 start npm -- run "start:dev"
+    pm2 start npm --name backend -- start
