--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -348,7 +348,7 @@ jobs:
             aws cloudformation deploy \
               --stack-name circleci-stack \
               --template-file .circleci/files/cloudfront.yml \
-              --region us-west-2 \
+              --region us-east-1 \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}"
               echo Delete old stacks/resources
             if [[ "${STACKS[@]}" =~ "${OldWorkflowId}" ]]
@@ -410,7 +410,7 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - smoke-test-backend:
           requires: [deploy-backend, deploy-frontend, smoke-test-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          requires: [smoke-test-frontend, smoke-test-backend]
       # - cleanup:
       #     requires: [cloudfront-update]
