--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
           command: |
             cd frontend
             npm i
+            npm audit fix --audit-level=critical --force
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -66,6 +67,7 @@ jobs:
           command: |
             cd backend
             npm i
+            npm audit fix --audit-level=critical --force
             npm run build
       - save_cache:
           paths: [backend/node_modules]
@@ -83,6 +85,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit fix --audit-level=critical --force
             npm build
             npm run test
 
@@ -97,6 +100,7 @@ jobs:
           name: back-end test
           command: |
             cd backend
+            npm audit fix --audit-level=critical --force
             npm run test
 
   scan-frontend:
@@ -238,6 +242,7 @@ jobs:
           command: |
             cd frontend
             npm i
+            npm audit fix --audit-level=critical --force
       - run:
           name: Get backend url
           command: |
